2014-10-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/cr-tag-table.sh: New test.

2014-10-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/man.c: Don't include sys/ioctl.h.

	* info/infomap.c (fetch_user_maps): Don't print an error message 
	if ".infokey" wasn't found.  Report from Karl Berry.

	* info/info.c (main) <--all>: If only one match, don't display a 
	menu of matches (this is what happened before).
	* info/t/all-only.sh: New test.

	* info/terminal.c (initialize_byte_map): Add byte sequences 
	beginning ESC [ and ESC O representing cursor keys.  Previously 
	these byte sequences were present in 
	default_emacs_like_info_keys before changes on 2014-06-28.

	* configure.ac: Remove use of AC_HEADER_TIOCGWINSZ.  Add 
	"sys/ioctl.h" to argument of AC_CHECK_HEADERS.
	* info/termdep.h: Make include of sys/ioctl.h conditional on 
	[HAVE_SYS_IOCTL_H] instead of [GWINSZ_IN_SYS_IOCTL].  This gives 
	the declaration of ioctl for Cygwin.  Report by Ken Brown.
	* info/session.c: Include of sys/ioctl.h conditional on 
	[HAVE_SYS_IOCTL_H] instead of [!__MINGW32__].

2014-10-06  Ken Brown  <kbrown@cornell.edu> (tiny change)

	* system.h [O_BINARY && !__MSDOS__]: Don't redefine setmode if 
	it is already defined.

2014-10-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/info-stnd.texi (Invoking Info): Add examples with --node.
	* info/info.c (info_short_help): Help text changed.

	* doc/texinfo.texi (Node Line Requirements): Tweak wording to 
	avoid implying that a node name with normalized whitespace has 
	to be used in all circumstances.  Report by Vincent Belaïche 
	2014-08-21 (bug #43042).

2014-10-03  Ken Brown  <kbrown@cornell.edu> (tiny change)

	Changes to compile for Cygwin:
	* info/Makefile.am (LDADD): Add "$(LIBICONV)".
	* info/info-utils.c: Remove include of nl_types.h.

	* man/Makefile.am: Don't build infokey.1.

2014-09-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_move_to_next_xref) 